--- a/force-app/main/default/classes/util/OEEPassword.cls
+++ b/force-app/main/default/classes/util/OEEPassword.cls
@@ -3,7 +3,7 @@ global with sharing class OEEPassword {
     /**
      * Use Middleware endpoint.
      */
-    global String generatePassword(Integer length) {
+    global static String generatePassword(Integer length) {
 
         String path = '/salesforce/action/password/generate?length='+length.toString();
         HttpResponse response = MiddlewareIntegration.sendMiddlewareRequest('GET', path);
