Make global operation invocable

--- a/force-app/main/default/classes/canvas-invocable/GetCanvasLogins.cls
+++ b/force-app/main/default/classes/canvas-invocable/GetCanvasLogins.cls
@@ -1,5 +1,6 @@
 global with sharing class GetCanvasLogins {
     
+    @InvocableMethod(Label='GetCanvasLogins' Description = 'Sets (but does not save) Primary/Alternate Login IDs' Category = 'Canvas Operation')
     global static List<lms_hed__LMS_Account__c> getCanvasLogins(List<lms_hed__LMS_Account__c> canvasAccounts) {
         for(lms_hed__LMS_Account__c canvasAccount : canvasAccounts) {
             lookupLogins(canvasAccount);
