Allow flow usage via @AuraEnabled

--- a/force-app/main/default/classes/util/HierarchyNode.cls
+++ b/force-app/main/default/classes/util/HierarchyNode.cls
@@ -1,9 +1,12 @@
 global without sharing class HierarchyNode {
     
+    @AuraEnabled
     @InvocableVariable(Required=false Label='ParentNode' Description='ParentNode for this SObject - NULL if top of tree.')
     global HierarchyNode parent = null;
+    @AuraEnabled
     @InvocableVariable(Required=false Label='ChildNodes' Description='Collection of SObjects that are children. NULL or Empty if no children.')
     global List<HierarchyNode> children = null;
+    @AuraEnabled
     @InvocableVariable(Required=false Label='SObject' Description='The actual SObject represented by this node.')
     global SObject node = null;
 
