Hierarchy LWC added

--- a/force-app/main/default/classes/util-invocable/GetObjectHierarchy.cls
+++ b/force-app/main/default/classes/util-invocable/GetObjectHierarchy.cls
@@ -1,12 +1,12 @@
 global without sharing class GetObjectHierarchy {
     
     @InvocableMethod(Label='GetObjectHierarchy' Description = 'Get a hierarchy of results for an object type.' Category = 'OEE Util')
-    global static List<HierarchyNode> getObjectHierarchy(List<GetObjectHierarchyRequest> requests) {
-        List<HierarchyNode> results = new List<HierarchyNode>();
+    global static List<GetObjectHierarchyResponse> getObjectHierarchy(List<GetObjectHierarchyRequest> requests) {
+        List<GetObjectHierarchyResponse> results = new List<GetObjectHierarchyResponse>();
         for(GetObjectHierarchyRequest request : requests) {
             Schema.DescribeSObjectResult describeResult = Schema.describeSObjects(new List<String>{request.resultClassName}).get(0);
             HierarchyBuilder builder = new HierarchyBuilder(describeResult.getSObjectType(), request.hierarchyField, request.childRelationship, request.fields, new Map<String, Object>{request.parentField => request.parentId});
-            results.add(builder.getFullHierarchy());
+            results.add(new GetObjectHierarchyResponse(builder.getFullHierarchy()));
         }
         return results;
     }
@@ -24,6 +24,17 @@ global without sharing class GetObjectHierarchy {
         global String childRelationship;
         @InvocableVariable(Required=true Label='Fields' Description='The fields to query - do not include Id or HierarchyField')
         global List<String> fields;
+    }
+
+    global class GetObjectHierarchyResponse {
+        
+        @InvocableVariable(Required=true Label='Top Node' Description='The top of the tree when building a hierarchy.')
+        global HierarchyNode topNode;
+
+        GetObjectHierarchyResponse(){}
+        GetObjectHierarchyResponse(HierarchyNode topNode) {
+            this.topNode = topNode;
+        }
     }
 
 }
