--- a/force-app/main/default/classes/util/HierarchyNode.cls
+++ b/force-app/main/default/classes/util/HierarchyNode.cls
@@ -1,23 +1,27 @@
 global without sharing class HierarchyNode {
-    
+
     @AuraEnabled
-    @InvocableVariable(Required=false Label='ParentNode' Description='ParentNode for this SObject - NULL if top of tree.')
-    global HierarchyNode parent = null;
-    @AuraEnabled
-    @InvocableVariable(Required=false Label='ChildNodes' Description='Collection of SObjects that are children. NULL or Empty if no children.')
-    global List<HierarchyNode> children = null;
+    @InvocableVariable(Required=true Label='ParentField' Description='Field that was set as the hierarchical relationship field.')
+    global String parentRelationship;
     @AuraEnabled
     @InvocableVariable(Required=false Label='SObject' Description='The actual SObject represented by this node.')
     global SObject node = null;
+    @AuraEnabled
+    @InvocableVariable(Required=false Label='ChildNodes' Description='Collection of SObjects that are children. NULL or Empty if no children.')
+    global List<HierarchyNode> children = null;
 
-    global HierarchyNode() {}
-    global HierarchyNode(HierarchyNode parent, SObject node) {
+    global HierarchyNode(){}
+    global HierarchyNode(SObject node) {
         this.node = node;
     }
 
     global void addChild(HierarchyNode child) {
         if(children == null) children = new List<HierarchyNode>();
         children.add(child);
+    }
+
+    global List<HierarchyNode> getChildren() {
+        return children;
     }
 
 }
