--- a/force-app/main/default/classes/background/OEEBasePostInstall.cls
+++ b/force-app/main/default/classes/background/OEEBasePostInstall.cls
@@ -2,10 +2,10 @@ global class OEEBasePostInstall implements InstallHandler {
 
     global void onInstall(InstallContext context) {
         // Hourly
-        OrgUtils.registerGlobalHandler(new EveryHour());
+        ScheduleUtils.registerGlobalHandler(new EveryHour());
 
         // Daily
-        OrgUtils.registerGlobalHandler(new EveryDay());
+        ScheduleUtils.registerGlobalHandler(new EveryDay());
     }
     
 }
