CSU_ID duplicate merge job initial addition

--- a/force-app/main/default/classes/background/BackgroundTest.cls
+++ b/force-app/main/default/classes/background/BackgroundTest.cls
@@ -20,6 +20,19 @@ private with sharing class BackgroundTest {
 
         hed__Trigger_Handler__c all = [SELECT Id FROM hed__Trigger_Handler__c WHERE hed__Object__c = 'EveryHour' AND hed__Class__c = 'csuoee.EveryHour' LIMIT 1];
         System.Assert(all != null);
+
+        ScheduleUtils.registerTaskHandler(new EveryDay(), new CheckCSUIDDupes(), 1);
+        ScheduleUtils.unregisterTaskHandler(new EveryDay(), new CheckCSUIDDupes());
+    }
+
+    @IsTest
+    private static void checkCSUIDDupes() {
+        Contact c1 = new Contact(FirstName = 'f1', LastName = 'l2', Email = 'f1l2@gmail.com', csuoee__CSU_ID__c = '1111111'), c2 = new Contact(FirstName = 'f1', LastName = 'l2', Email = 'f1l2@colostate.edu', csuoee__CSU_ID__c = '1111111');
+        List<Contact> contacts = new List<Contact>{c1, c2};
+        insert contacts;
+        Test.startTest();
+        (new CheckCSUIDDupes()).runTask();
+        Test.stopTest();
     }
 
 }
