Conditionally Set MasterContact fields

--- a/force-app/main/default/classes/background/BackgroundTest.cls
+++ b/force-app/main/default/classes/background/BackgroundTest.cls
@@ -27,7 +27,22 @@ private with sharing class BackgroundTest {
 
     @IsTest
     private static void checkCSUIDDupes() {
-        Contact c1 = new Contact(FirstName = 'f1', LastName = 'l2', Email = 'f1l2@gmail.com', csuoee__CSU_ID__c = '1111111'), c2 = new Contact(FirstName = 'f1', LastName = 'l2', Email = 'f1l2@colostate.edu', csuoee__CSU_ID__c = '1111111');
+        User u = new User(
+            ProfileId = [SELECT Id FROM Profile WHERE Name LIKE '%Standard%' LIMIT 1].Id,
+            FirstName = 'Service',
+            LastName = 'Account',
+            Email = 'test12397589@testuser.com',
+            Username = 'test12397589@testuser.com' + System.currentTimeMillis(),
+            CompanyName = 'TEST',
+            Title = 'title',
+            Alias = 'alias',
+            TimeZoneSidKey = 'America/Los_Angeles',
+            EmailEncodingKey = 'UTF-8',
+            LanguageLocaleKey = 'en_US',
+            LocaleSidKey = 'en_US'
+        );
+        insert u;
+        Contact c1 = new Contact(FirstName = 'f1', LastName = 'l2', Email = 'f1l2@gmail.com', csuoee__CSU_ID__c = '1111111'), c2 = new Contact(OwnerId = u.Id, FirstName = 'f1', LastName = 'l2', Email = 'f1l2@colostate.edu', csuoee__CSU_ID__c = '1111111');
         List<Contact> contacts = new List<Contact>{c1, c2};
         insert contacts;
         Test.startTest();
