--- a/force-app/main/default/classes/background/BackgroundTest.cls
+++ b/force-app/main/default/classes/background/BackgroundTest.cls
@@ -41,8 +41,23 @@ private with sharing class BackgroundTest {
             LanguageLocaleKey = 'en_US',
             LocaleSidKey = 'en_US'
         );
+        User u2 = new User(
+            ProfileId = [SELECT Id FROM Profile WHERE Name LIKE '%Standard%' LIMIT 1].Id,
+            FirstName = 'First',
+            LastName = 'Last',
+            Email = 'test14497589@testuser.com',
+            Username = 'test14497589@testuser.com' + System.currentTimeMillis(),
+            CompanyName = 'TEST',
+            Title = 'title',
+            Alias = 'alias',
+            TimeZoneSidKey = 'America/Los_Angeles',
+            EmailEncodingKey = 'UTF-8',
+            LanguageLocaleKey = 'en_US',
+            LocaleSidKey = 'en_US'
+        );
         insert u;
-        Contact c1 = new Contact(FirstName = 'f1', LastName = 'l2', Email = 'f1l2@gmail.com', csuoee__CSU_ID__c = '1111111'), c2 = new Contact(OwnerId = u.Id, FirstName = 'f1', LastName = 'l2', Email = 'f1l2@colostate.edu', csuoee__CSU_ID__c = '1111111');
+        insert u2;
+        Contact c1 = new Contact(OwnerId = u.Id, FirstName = 'f1', LastName = 'l2', Email = 'f1l2@gmail.com', csuoee__CSU_ID__c = '1111111'), c2 = new Contact(OwnerId = u2.Id, FirstName = 'f1', LastName = 'l2', Email = 'f1l2@colostate.edu', csuoee__CSU_ID__c = '1111111');
         List<Contact> contacts = new List<Contact>{c1, c2};
         insert contacts;
         Test.startTest();
