Added a job for every 30 min. after the hour

--- a/force-app/main/default/classes/background/EveryHour30.cls
+++ b/force-app/main/default/classes/background/EveryHour30.cls
@@ -1,10 +1,10 @@
-global class Every10Minutes implements CronSchedulable {
+global class EveryHour30 implements CronSchedulable {
     
     global String getJobName() {
-        return 'Every10Minutes';
+        return 'EveryHour30';
     }
 
-    global static String DAY_SCHEDULE = '0 */10 * * * ?';
+    global static String DAY_SCHEDULE = '10 30 * * * ?';
     global String getSchedule() {
         return DAY_SCHEDULE;
     }
